--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ header {
     margin-top: 20px;
 }
 
-.sponsor_icons {
+.sponsor_images {
     display: flex;
     justify-content: space-between;
     gap: 80px;
